# mcp-riva-speech-recognition

./: Dockerfile  config.example  pyproject.toml  run_server.py
src/riva_speech_recognition_mcp/: __init__.py  server.py
